tests/rosetta/out/Fortran/arithmetic-integer-2.error
gfortran: exit status 1
/tmp/arithmetic-integer-2.f90:21:3:

   21 |   main()
      |   1
Error: Unclassifiable statement at (1)
